new radio messages binds and commented out mat_setvideomode since it did not work anymore. Also changes zoom sens value

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -114,7 +114,7 @@ m_pitch				    		"0.022"
 m_rawinput			    		"1"
 m_side				    		"0.8"
 m_yaw				    		"0.022"
-zoom_sensitivity_ratio_mouse    "1.0"
+zoom_sensitivity_ratio_mouse    "0.818933027098955175"
 
 //*************************************************
 //*************************************************
@@ -220,8 +220,8 @@ net_scale                       "5"     // Makes font smaller
 //*************************************************
 //*************************************************
 
-mat_setvideomode                1728 1080 0 1
-mat_monitorgamma                "1.7"
+//mat_setvideomode                1728 1080 0 1
+mat_monitorgamma                "1.6"
 mat_monitorgamma_tv_enabled     "0"
 
 //*************************************************
@@ -609,7 +609,7 @@ bind j "currentSens"
 bind k "callvote"
 bind l "switchHands"
 bind m "teammenu"
-bind n "radio3"
+// bind n ""
 bind o "teamEQ"
 bind p "disablevoice"
 bind q "lastinv"
@@ -619,11 +619,11 @@ bind t "+lookatweapon"
 bind u "messagemode2"
 bind v "+voicerecord"
 bind w "+forward"
-bind x "radio2"
+bind x "radio3" // banana gaming radio "radio" -- radio1 .orig "standard"
 bind y "messagemode"
-bind z "radio1"
-bind , "buyammo1"
-bind . "buyammo2"
+// bind z ""
+bind , "radio1" // banana gaming radio "bot menu" -- radio3 .orig "report"
+bind . "radio2" // banana gaming radio "training" -- radio2 .orig "group"
 bind \ "toggleconsole"
 bind "SPACE" "+jump"
 bind "TAB" "+scorenet"
