--- a/prac.cfg
+++ b/prac.cfg
@@ -1,27 +1,34 @@
 clear
 
-
 sv_cheats 1
+
+mp_forcecamera 0
+mp_solid_teammates 1
+mp_spectators_max 10 
+mp_radar_showall 1
+sv_enablebunnyhopping 1
+sv_autobunnyhopping 1
 
 mp_humanteam ct
 mp_autoteambalance 0
 mp_limitteams 0
 mp_round_restart_delay 0
-mp_Freezetime 0
+mp_freezetime 0
 mp_free_armor 2
 mp_respawn_on_death_t 1
 mp_respawn_on_death_ct 1
-mp_buytime 99999
+mp_buytime 9999
 mp_buy_anywhere 1
-mp_roundtime 99999
-mp_roundtime_defuse 99999
-mp_roundtime_hostage 99999
-mp_startmoney 99999
-mp_teamname_2 Meat
+mp_roundtime 60
+mp_roundtime_defuse 60
+mp_roundtime_hostage 60
+mp_maxmoney 60000
+mp_startmoney 60000
+mp_teamname_2 meat
 mp_teamname_1 You
 mp_respawn_immunitytime 0
 
-sv_infinite_ammo 1
+sv_infinite_ammo 2
 sv_grenade_trajectory 1
 sv_grenade_trajectory_time 5
 sv_showimpacts 0
