added new crosshairs and renamed the old ones. Also fixed ten second warning music always on.

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -138,12 +138,13 @@ defaultFilter
 volume                          "0.75"
 voice_enable                    "1"
 voice_scale                     ".5" // receive volume
-snd_musicvolume                 "0.5"
+snd_musicvolume                 ".5"
 snd_use_hrtf                    "1" //Turn ON Head-Related Transfer Function
 snd_mixahead                    "0.05" // sound delay
 snd_mute_losefocus              "1" // mute game when alt-tabbed
 snd_legacy_surround				"0"
 snd_menumusic_volume            "0"
+snd_tensecondwarning_volume     "0.7"
 lobby_voice_chat_enabled        "0" // voice chat in lobby
 windows_speaker_config          "1" // default=-1 - -1=Automatic 1=Headset 3=4Speakers 4=StereoSpeakers 6=5.1 Surround
 dsp_enhance_stereo              "0" // default=0
@@ -382,15 +383,16 @@ alias "-scorenet" "-showscores; net_graph 0"
 // 2. create new alias cX + 1 "exec crosshair_XXX.cfg; alias change_ch c1" after the others.
 // 3. change the part "change_ch c1" to cX + 1 in the current last alias.
 alias change_ch "c1"
-alias c1 "exec crosshair_red_and_dynamic.cfg; alias change_ch c2"
-alias c2 "exec crosshair_small_teal_dynamic.cfg; alias change_ch c3"
-alias c3 "exec crosshair_small_teal_static.cfg; alias change_ch c4"
-alias c4 "exec crosshair_banana_gaming.cfg; alias change_ch c5"
-alias c5 "exec crosshair_nick_bunyun.cfg; alias change_ch c6"
-alias c6 "exec crosshair_1.cfg; alias change_ch c7"
-alias c7 "exec crosshair_2.cfg; alias change_ch c8"
-alias c8 "exec crosshair_3.cfg; alias change_ch c9"
-alias c9 "exec crosshair_4.cfg; alias change_ch cLast"
+alias c1 "exec crosshair_1.cfg; alias change_ch c2"
+alias c2 "exec crosshair_2.cfg; alias change_ch c3"
+alias c3 "exec crosshair_3.cfg; alias change_ch c4"
+alias c4 "exec crosshair_4.cfg; alias change_ch c5"
+alias c5 "exec crosshair_5.cfg; alias change_ch c6"
+alias c6 "exec crosshair_6.cfg; alias change_ch c7"
+alias c7 "exec crosshair_7.cfg; alias change_ch c8"
+alias c8 "exec crosshair_8.cfg; alias change_ch c9"
+alias c9 "exec crosshair_9.cfg; alias change_ch c10"
+alias c10 "exec crosshair_10.cfg; alias change_ch cLast"
 
 alias cLast "exec crosshair_null.cfg; alias change_ch c1; playvol buttons\blip1 0.5"
 
@@ -486,11 +488,8 @@ alias nades "buyflash; buysgren; buyhegren; buymolotov; buyincgrenade; buyflash"
 
 alias "disablevoice" "clutch"
 alias "clutch" "clutchon"
-alias "clutchon" "voice_enable 0; clutchsoundon; gameinstructor_enable 1; cl_clearhinthistory; r_cleardecals; playvol buttons\weapon_confirm 0.5; say_team Clutch mode: ON (text & voice chat are disabled); alias clutch clutchoff"
-alias "clutchoff" "voice_enable 1; clutchsoundoff; gameinstructor_enable 0; playvol buttons\button2 0.5; say_team Clutch mode: OFF (text & voice chat are enabled); alias clutch clutchon"
-
-alias "clutchsoundon" "volume 0.8; snd_musicvolume 0.2; snd_menumusic_volume 0; snd_deathcamera_volume 0; snd_mapobjective_volume 0; snd_roundend_volume 0; snd_roundstart_volume 0; snd_tensecondwarning_volume 1"
-alias "clutchsoundoff" "volume 0.5; snd_musicvolume 0; snd_menumusic_volume 0; snd_deathcamera_volume 0; snd_mapobjective_volume 0; snd_roundend_volume 0; snd_roundstart_volume 0; snd_tensecondwarning_volume 0"
+alias "clutchon" "voice_enable 0; gameinstructor_enable 1; cl_clearhinthistory; r_cleardecals; playvol buttons\weapon_confirm 0.5; say_team Clutch mode: ON (text & voice chat are disabled); alias clutch clutchoff"
+alias "clutchoff" "voice_enable 1; gameinstructor_enable 0; playvol buttons\button2 0.5; say_team Clutch mode: OFF (text & voice chat are enabled); alias clutch clutchon"
 
 //*************************************************
 //*************************************************
