--- a/crosshair_5.cfg
+++ b/crosshair_5.cfg
@@ -1,4 +1,4 @@
-
+echo crosshair_teal_static
 cl_crosshairalpha               "999"
 cl_crosshaircolor               "5"
 cl_crosshaircolor_b             "250"
