--- a/crosshair_10.cfg
+++ b/crosshair_10.cfg
@@ -1,3 +1,4 @@
+echo crosshair_10
 cl_crosshair_drawoutline "1"
 cl_crosshair_dynamic_maxdist_splitratio "0.35"
 cl_crosshair_dynamic_splitalpha_innermod "1"
@@ -11,8 +12,8 @@ cl_crosshaircolor "5"
 cl_crosshaircolor_b "0"
 cl_crosshaircolor_g "255"
 cl_crosshaircolor_r "0"
-cl_crosshairdot "1"
-cl_crosshairgap "-4.5"
+cl_crosshairdot "0"
+cl_crosshairgap "-1.5"
 cl_crosshairgap_useweaponvalue "0"
 cl_crosshairscale "1000"
 cl_crosshairsize "0.5"
