--- a/crosshair_3.cfg
+++ b/crosshair_3.cfg
@@ -1,15 +1,16 @@
-cl_crosshair_drawoutline "1"
-cl_crosshair_outlinethickness "1"
+
+// based on tweedays crosshair from jan 2016
+echo crosshair_red_and_dynamic
 cl_crosshairalpha "255"
 cl_crosshaircolor "5"
-cl_crosshaircolor_b "255"
-cl_crosshaircolor_g "255"
+cl_crosshaircolor_b "0"
 cl_crosshaircolor_r "255"
+cl_crosshaircolor_g "0"
 cl_crosshairdot "0"
 cl_crosshairgap "-1"
-cl_crosshairgap_useweaponvalue "0"
-cl_crosshairscale "0"
 cl_crosshairsize "3"
-cl_crosshairstyle "4"
-cl_crosshairthickness "0.5"
+cl_crosshairstyle "5"
 cl_crosshairusealpha "1"
+cl_crosshairthickness "0.075"
+cl_fixedcrosshairgap "0"
+cl_crosshair_drawoutline 0
