--- a/crosshair_4.cfg
+++ b/crosshair_4.cfg
@@ -1,7 +1,16 @@
-cl_crosshair_drawoutline 0
-cl_crosshaircolor 5
-cl_crosshairdot 0
-cl_crosshairgap -3
-cl_crosshairsize 3
-cl_crosshairstyle 4
-cl_crosshairthickness 1
+echo crosshair_small_and_dynamic
+cl_crosshairalpha               "999"
+cl_crosshaircolor               "5"
+cl_crosshaircolor_b             "250"
+cl_crosshaircolor_r             "50"
+cl_crosshaircolor_g             "250"
+cl_crosshairdot                 "1"
+cl_crosshairgap                 "-1" // classic
+cl_crosshairsize                "3"
+cl_crosshairstyle               "5" // 5 rörligt, 4 statiskt
+cl_crosshairusealpha            "1"
+cl_crosshairthickness           "0.25"
+cl_fixedcrosshairgap            "0" // new
+cl_crosshair_drawoutline        "0"
+cl_crosshair_outlinethickness   "1"
+cl_crosshairgap_useweaponvalue  "0"
